--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,5 +2,7 @@
   link: /
 - name: Defining the Problem
   link: /hw2.html
+- name: Identification
+  link: /hw3.html
 #- name: Blog
   #link: /blog.html
