--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,7 @@
   link: /hw2.html
 - name: Identification
   link: /hw3.html
+- name: Estimation
+  link: /hw4.html
 #- name: Blog
   #link: /blog.html
