--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,5 @@
   link: /hw3.html
 - name: Estimation
   link: /hw4.html
-#- name: Blog
-  #link: /blog.html
+- name: Sensitivity Analysis
+  link: /hw5.html
